--- a/client/src/pages/warehouse/warehouse_homepage_director.html
+++ b/client/src/pages/warehouse/warehouse_homepage_director.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/css/selectize.bootstrap4.min.css" />
 
-    <link href="../../assets/css/common.css?1323" rel="stylesheet" />
+    <link href="../../assets/css/common.css?13323" rel="stylesheet" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -18,11 +18,11 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/js/standalone/selectize.min.js"></script>
 
-    <script src="../../assets/js/request.js?12233334"></script>
-    <script src="../../assets/js/generators.js?143234"></script>
-    <script src="../../assets/js/record_edit.js?125634"></script>
-    <script src="../../assets/js/append_img_request_state.js?74232534"></script>
-    <script src="../../assets/js/queries.js?1332534"></script>
+    <script src="../../assets/js/request.js?122333334"></script>
+    <script src="../../assets/js/generators.js?1432334"></script>
+    <script src="../../assets/js/record_edit.js?1253634"></script>
+    <script src="../../assets/js/append_img_request_state.js?734232534"></script>
+    <script src="../../assets/js/queries.js?13332534"></script>
     <script>
       function make_editable(element) {
         $("#edit-popup").show();
