Added warehouse oracle queries Going to finish warehouse Fixed minor details

--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -147,9 +147,9 @@
           PRODUCT: "productName",
           FLAVOUR: "productFlavour",
           NOTES: "notes",
-          "REQUEST DATE [dd/mm/yyyy]": "requestDate",
-          "DUE DATE [dd/mm/yyyy]": "dueDate",
-          "CLOSED DATE [dd/mm/yyyy]": "terminationDate",
+          "REQUEST DATE": "requestDate",
+          "DUE DATE": "dueDate",
+          "CLOSED DATE": "terminationDate",
           "LAST COUNT": "lastCount",
         };
         const table_data_requester = new Requester((result) => {
