--- a/client/src/pages/warehouse/warehouse_homepage_director.html
+++ b/client/src/pages/warehouse/warehouse_homepage_director.html
@@ -22,7 +22,7 @@
     <script src="../../assets/js/generators.js?1432334"></script>
     <script src="../../assets/js/record_edit.js?1253634"></script>
     <script src="../../assets/js/append_img_request_state.js?734232534"></script>
-    <script src="../../assets/js/queries.js?13332534"></script>
+    <script src="../../assets/js/queries.js?1332534"></script>
     <script>
       function make_editable(element) {
         $("#edit-popup").show();
@@ -111,8 +111,8 @@
           PRODUCT: "productName",
           FLAVOUR: "productFlavour",
           NOTES: "notes",
-          "REQUEST DATE [dd/mm/yyyy]": "requestDate",
-          "DUE DATE [dd/mm/yyyy]": "dueDate",
+          "REQUEST DATE": "requestDate",
+          "DUE DATE": "dueDate",
           "EXPECTED IN TOTAL": "expectedCount",
           "READY TO BE SHIPPED": "expectedGroundCount",
         };
