--- a/client/src/pages/warehouse/warehouse_homepage_director.html
+++ b/client/src/pages/warehouse/warehouse_homepage_director.html
@@ -52,8 +52,7 @@
 
           //EXPECTED COUNT
           const expected_count_requester = new Requester(function (result) {
-            console.log(result);
-            //$("#expected_count").val(result.results[0].expectedCount);
+            $("#expected_count").val(result.results.N_TOT[0]);
           });
           expected_count_requester.query({
             q_name: "warehouse_expected_count",
@@ -63,8 +62,24 @@
               "f.currentYear": now.getFullYear(),
             },
           });
-
-          $("#expected_ground_count").val(result.results[0].expectedGroundCount);
+          //EXPECTED GROUND COUNT
+          const expected_ground_count_requester = new Requester(function (result) {
+            if (result.PRELEVATO) {
+              let ground_count = result.results.N_TOT.reduce((x, y) => x + y);
+              $("#expected_ground_count").val(ground_count);
+            } else {
+              $("#expected_ground_count").val(0);
+            }
+          });
+          expected_ground_count_requester.query({
+            q_name: "warehouse_expected_ground_count",
+            q_data: {
+              "d.lastYear": now.getFullYear() - 1,
+              "d.currentYear": now.getFullYear(),
+              "f.productCode": result.results[0].productCode,
+              "f.productFlavour": result.results[0].productFlavour,
+            },
+          });
 
           //Hide all buttons before selecting which to show counted_items
           $("#btn-count").hide();
