Revert "Fixed bug"
This reverts commit b269d2d5

--- a/client/src/pages/warehouse/warehouse_homepage_operator.html
+++ b/client/src/pages/warehouse/warehouse_homepage_operator.html
@@ -18,11 +18,11 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/js/standalone/selectize.min.js"></script>
 
-    <script src="../../assets/js/request.js?12234336334"></script>
-    <script src="../../assets/js/generators.js?145373234"></script>
-    <script src="../../assets/js/record_edit.js?1325234"></script>
-    <script src="../../assets/js/append_img_request_state.js?713565534"></script>
-    <script src="../../assets/js/queries.js?1332534"></script>
+    <script src="../../assets/js/request.js?1223436334"></script>
+    <script src="../../assets/js/generators.js?14573234"></script>
+    <script src="../../assets/js/record_edit.js?125234"></script>
+    <script src="../../assets/js/append_img_request_state.js?71565534"></script>
+    <script src="../../assets/js/queries.js?132534"></script>
     <script>
       function make_editable(element) {
         $("#edit-popup").show();
