Almost finished expected location

--- a/client/src/pages/warehouse/warehouse_homepage_director.html
+++ b/client/src/pages/warehouse/warehouse_homepage_director.html
@@ -346,6 +346,11 @@
               </div>
             </div>
 
+            <div class="row col-12 justify-content-center" style="padding-top: 10px; background-color: red">
+              <span style="text-align: center; font-weight: 800; font-size: 1.5rem"
+                >Location standard: <span style="font-weight: 600; font-size: 1.8rem">THE LOCATION</span></span
+              >
+            </div>
             <div class="row col-12 justify-content-center" style="padding-top: 10px">
               <div class="col-10 form-group row col-12 margin-10">
                 <button name="update" class="styled-btn btn-blue" id="btn-count">Items Counted</button>
