--- a/client/src/pages/warehouse/warehouse_homepage_operator.html
+++ b/client/src/pages/warehouse/warehouse_homepage_operator.html
@@ -67,6 +67,17 @@
               "f.productFlavour": result.results[0].productFlavour,
             },
           });
+          //EXPECTED LOCATION
+          const expected_location = new Requester(function (result) {
+            $("#productLocation").text(`${result.results.ALTEZZA[0]} ${result.results.CORRIDOIO[0]} ${result.results.TRAVERSA[0]} ${result.results.ZONA[0]}`);
+          });
+          expected_location.query({
+            q_name: "warehouse_get_product_location",
+            q_data: {
+              "f.productCode": result.results[0].productCode,
+              "f.productFlavour": result.results[0].productFlavour,
+            },
+          });
 
           //Hide all buttons before selecting which to show counted_items
           $("#btn-count").hide();
@@ -117,9 +128,7 @@
 
         $("#btn-count").click((e) => {
           if ($.isNumeric($("#counted_items").val()) && $("#counted_items").val() > 0) {
-            console.log($("#popup").attr("class"));
-            console.log($("#counted_items").val());
-            if ($("#img_request_state").children("img").attr("title") == "Asked for count" || "Asked for recount") {
+            if ($("#img_request_state").children("img").attr("title") == "Asked for count") {
               warehouseCount($("#popup").attr("class"), $("#counted_items").val(), "countRequest");
               location.reload();
             } else if ($("#img_request_state").children("img").attr("title") == "Asked for recount") {
@@ -144,7 +153,7 @@
           table_maker(result.results, "request-table-container", table_headers_strings);
           register_clicks();
         });
-        table_data_requester.query({ q_name: "warehouse_requests" });
+        table_data_requester.query({q_name: "warehouse_requests"});
       });
     </script>
   </head>
@@ -184,15 +193,7 @@
                       <div class="input-group-prepend">
                         <div class="input-group-text"><i class="fa fa-barcode"></i></div>
                       </div>
-                      <input
-                        id="prod_code"
-                        name="prod_code"
-                        type="text"
-                        class="form-control"
-                        aria-describedby="prod_codeHelpBlock"
-                        required="required"
-                        readonly
-                      />
+                      <input id="prod_code" name="prod_code" type="text" class="form-control" aria-describedby="prod_codeHelpBlock" required="required" readonly />
                     </div>
                     <span id="prod_codeHelpBlock" class="form-text text-muted">Code assigned to the product</span>
                   </div>
@@ -205,15 +206,7 @@
                       <div class="input-group-prepend">
                         <div class="input-group-text"><i class="fa fa-tag"></i></div>
                       </div>
-                      <input
-                        id="prod_name"
-                        name="prod_name"
-                        type="text"
-                        class="form-control"
-                        aria-describedby="prod_nameHelpBlock"
-                        required="required"
-                        readonly
-                      />
+                      <input id="prod_name" name="prod_name" type="text" class="form-control" aria-describedby="prod_nameHelpBlock" required="required" readonly />
                     </div>
                     <span id="prod_nameHelpBlock" class="form-text text-muted">Descriptive product name</span>
                   </div>
@@ -228,15 +221,7 @@
                           <i class="fa fa-archive"></i>
                         </div>
                       </div>
-                      <input
-                        id="prod_variant"
-                        name="prod_variant"
-                        type="text"
-                        class="form-control"
-                        aria-describedby="prod_variantHelpBlock"
-                        required="required"
-                        readonly
-                      />
+                      <input id="prod_variant" name="prod_variant" type="text" class="form-control" aria-describedby="prod_variantHelpBlock" required="required" readonly />
                     </div>
                     <span id="prod_variantHelpBlock" class="form-text text-muted">The specific variant of this product</span>
                   </div>
@@ -267,15 +252,7 @@
                           <i class="fa fa-calendar"></i>
                         </div>
                       </div>
-                      <input
-                        id="date_due"
-                        name="date_due"
-                        type="date"
-                        class="form-control"
-                        aria-describedby="date_dueHelpBlock"
-                        required="required"
-                        readonly
-                      />
+                      <input id="date_due" name="date_due" type="date" class="form-control" aria-describedby="date_dueHelpBlock" required="required" readonly />
                     </div>
                   </div>
                 </div>
@@ -289,15 +266,7 @@
                           <i class="fa fa-calendar"></i>
                         </div>
                       </div>
-                      <input
-                        id="date_creation"
-                        name="date_creation"
-                        type="text"
-                        aria-describedby="date_creationHelpBlock"
-                        required="required"
-                        class="form-control"
-                        readonly
-                      />
+                      <input id="date_creation" name="date_creation" type="text" aria-describedby="date_creationHelpBlock" required="required" class="form-control" readonly />
                     </div>
                   </div>
                 </div>
@@ -332,14 +301,7 @@
                               <i class="fa fa-bar-chart-o"></i>
                             </div>
                           </div>
-                          <input
-                            id="counted_items"
-                            name="counted_items"
-                            type="number"
-                            class="form-control margin-5"
-                            aria-describedby="counted_itemsHelpBlock"
-                            required
-                          />
+                          <input id="counted_items" name="counted_items" type="number" class="form-control margin-5" aria-describedby="counted_itemsHelpBlock" required />
                         </div>
                       </div>
                     </div>
@@ -348,8 +310,11 @@
               </div>
             </div>
 
-            <!-- Count -->
-            <div class="row" style="margin-top: 13px !important"></div>
+            <div class="row col-12 justify-content-center" style="padding-top: 10px">
+              <span style="text-align: center; font-weight: 800; font-size: 1.5rem"
+                >Location standard: <span id="productLocation" style="font-weight: 600; font-size: 1.8rem"></span
+              ></span>
+            </div>
 
             <div class="row col-12 justify-content-center" style="padding-top: 10px">
               <div class="col-10 form-group row col-12 margin-10">
@@ -370,9 +335,7 @@
       <!--  -->
       <div class="sub-header">
         <div class="dropdown">
-          <button class="styled-btn dropdown-toggle btn-blue" type="button" id="btn-filters" data-bs-toggle="dropdown" aria-expanded="false">
-            Filters
-          </button>
+          <button class="styled-btn dropdown-toggle btn-blue" type="button" id="btn-filters" data-bs-toggle="dropdown" aria-expanded="false">Filters</button>
           <ul class="dropdown-menu btn-blue" aria-labelledby="btn-filters">
             <li><a class="dropdown-item" href="#">Most Recent</a></li>
             <li><a class="dropdown-item" href="#">Oldest</a></li>
