--- a/client/src/pages/warehouse/warehouse_homepage_director.html
+++ b/client/src/pages/warehouse/warehouse_homepage_director.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/css/selectize.bootstrap4.min.css" />
 
-    <link href="../../assets/css/common.css?1323" rel="stylesheet" />
+    <link href="../../assets/css/common.css?1867323" rel="stylesheet" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -18,11 +18,11 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/js/standalone/selectize.min.js"></script>
 
-    <script src="../../assets/js/request.js?12233334"></script>
-    <script src="../../assets/js/generators.js?143234"></script>
-    <script src="../../assets/js/record_edit.js?125634"></script>
-    <script src="../../assets/js/append_img_request_state.js?74232534"></script>
-    <script src="../../assets/js/queries.js?1332534"></script>
+    <script src="../../assets/js/request.js?12233876334"></script>
+    <script src="../../assets/js/generators.js?147362834"></script>
+    <script src="../../assets/js/record_edit.js?125687634"></script>
+    <script src="../../assets/js/append_img_request_state.js?74287632534"></script>
+    <script src="../../assets/js/queries.js?1383672534"></script>
     <script>
       function make_editable(element) {
         $("#edit-popup").show();
@@ -143,10 +143,10 @@
           if ($.isNumeric($("#counted_items").val()) && $("#counted_items").val() > 0) {
             if ($("#img_request_state").children("img").attr("title") == "Asked for count") {
               warehouseCount($("#popup").attr("class"), $("#counted_items").val(), "countRequest");
-              location.reload();
+              //location.reload();
             } else if ($("#img_request_state").children("img").attr("title") == "Asked for recount") {
               warehouseCount($("#popup").attr("class"), $("#counted_items").val(), "recountRequest");
-              location.reload();
+              //location.reload();
             }
           } else {
             alert("No empty fields or negatives numbers are accepted");
